BOARD18 2.1.3 Release Notes

Changes from 2.1.2 Release:
Implemented Issue 57 - Redesigned placement logic for context
menus and token selection canvases.

BOARD18 2.1.2 Release Notes

Changes from 2.1.1  Release:
Fixed Issue 56 - context menus can overlap edge of screen
Also made some documentation changes to comments in code.

BOARD18 2.1.1 Release Notes

Changes from 2.1.0  Release:
Removed some missed scaling code from enhanced support for browser zoom.

BOARD18 2.1.0 Release Notes

Changes from 2.0.0  Release:

* Removed enhanced support for browser zoom. See 
  http://wiki.board18.org/w/Release_2.0.0_Issue
* Made two other minor fixes.

BOARD18 2.0.0 Release Notes

Changes from 1.5.0  Release:

* Implemented Issue 1 - Request for an "undo" capability 
* Implemented Issue 20 - Associated spreadsheet URL capability
* Implemented Issue 47 - Rewrite JS to remove contextMenu API
* Implemented Issue 50 - Long Term Ergonomic Proposal
* Redesigned main menu for SnapMap and SnapMrk pages.
* Added "About BOARD18" option to all main menus.
* Fixed toggle on all main menus.
* Enhanced support for browser zoom, but issue 48 is still unresolved.
* Removed some leftover debugging code.
* Made many other minor tweaks and fixes.

BOARD18 1.5.0 Release Notes

Changes from 1.4.2  Release:

* Implemented issue 27 Phase 4 - board18Boxes.php.
* Added links between board18Boxes.php, board18Games.php and board18Players.php

BOARD18 1.4.2 Release Notes

Changes from 1.4.1  Release:

Fixed status swap bug in board18Misc.php

BOARD18 1.4.1 Release Notes

Changes from 1.4.0  Release:

Added 3 new PHP functions. 
They are linkGet, linkAdd and linkDel. 
Updated board18Misc page to support toggling the current game status.
Added link processing functions to board18Misc page.

BOARD18 1.4.0 Release Notes

Changes from 1.3.4 Release:

Updated game_link table. 
See http://wiki.board18.org/w/The_game_link_Table_Fix_for_release_1.4.x
Added aboutBoard18() function to board18com.js.
