@@ -203,7 +203,7 @@ function snapshotOK(response) {
   else if (response === 'success') {
     msg = BD18.welcomename + ": ";
     msg += "Your snap shot request has been successful. ";
-    $('#lognote').text(msg);
+    doLogNote(msg);
   }
   else if (response === 'fail') {
     var errmsg = 'Snapshot failed.\n';
